fix: Change color for .selected-page class to increase contrast.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
     --site-background-color: #051923;
     --block-backgorund-color: #1E293BFF;
     --border-color: rgba(229, 71, 234, 0.44);
-    --selected-link-color: #0050c8;
+    --selected-link-color: #00ceff;
     --button-color: #01689e;
     --button-hover-color: #00A6FB;
     --text-color: #C0C0C0;
